# atlantis

./: .gitignore  DISCOVERY-TEST-FINDINGS.md  README.md  TESTING-SUMMARY.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  test-manual-functionality.sh  test-results.json  test-results.xml
backend/: .env.example  AUTHENTICATION_README.md  Dockerfile  FILE_STORAGE_README.md  README.md  main.py  pyproject.toml  setup_auth.py  setup_file_storage.py  test_integration.py
backend/app/: __init__.py
backend/app/api/: __init__.py  auth.py  diagrams.py  files.py  git.py  git_tokens.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/middleware/: auth.py  security_headers.py
backend/app/models/: __init__.py  diagram.py  diagram_sql.py  file.py  user.py
backend/app/schemas/: auth.py  file.py
backend/app/services/: auth_service.py  file_service.py  git_service.py  git_token_service.py
backend/app/utils/: file_validators.py
backend/tests/: test_auth.py  test_file_api.py  test_file_integration.py  test_file_service.py  test_git_api.py  test_git_service.py  test_main.py
docs/: API.md  Bug-Report-E2E-Testing.md  Comprehensive-E2E-Testing-Final-Report.md  DEVELOPMENT.md  DOCKER_TESTING.md  E2E-Test-Summary-Report.md  E2E-Testing-Post-Final-Report.md  Functional-UI-Test-Findings.md  PHASE2_IMPLEMENTATION.md  PRD.md  PROGRESS.md  Test-Validation-Summary.md  comprehensive-test-report.md  mermaid.stats.md  mermaid.xml  personal-findings.md  potential-solution-backend.md  reference.md  testing-implementation-plan.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  (+2 more)
(+53 files in other folders)
